Made change to support Java 21. Added some comments.